--- a/learning_site/templates/home.html
+++ b/learning_site/templates/home.html
@@ -1,1 +1,5 @@
-<h1>Welcome</h1>
+{% extends "layout.html" %}
+
+{% block title %}Well Hello There!{% endblock %}
+
+{% block content %}<h1>Welcome</h1>{% endblock %}
