--- a/learning_site/templates/layout.html
+++ b/learning_site/templates/layout.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <div class='site-container'>
+            <nav>
+                <a href="{% url 'hello_world' %}">Home</a>
+                <a href="{% url 'courses:course_list' %}">Courses</a>
+            </nav>
             {% block content %}{% endblock %}
         </div>
     </body>
