--- a/learning_site/courses/templates/courses/step_detail.html
+++ b/learning_site/courses/templates/courses/step_detail.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% load course_extras %}
 
 {% block title %}{{ step.title }} - {{ step.course.title }}{% endblock %}
 
@@ -8,6 +9,9 @@
         <a href="{% url "courses:detail" pk=step.course.pk %}">{{ step.course.title }}</a>
     </h2>
     <h3>{{ step.title }}</h3>
-    {{ step.content|linebreaks }}
+
+    {% with con=step.content %}
+        {{ con|linebreaks }} Content: {{ con|wordcount }} words. Estimated time to complete: {{ con|wordcount|time_estimate }} minute{{ con|wordcount|time_estimate|pluralize }}.
+    {% endwith %}
 </article>
 {% endblock %}
